// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonDropdown /> ComponentWrapped story renders snapshot 1`] = `
<div
  class="button-dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="trigger-button"
    type="button"
  >
    Open Dropdown
  </button>
  <div
    class="dropdown-menu button-dropdown__dropdown-menu"
  >
    <ul
      class="dropdown-menu__list"
      role="menu"
    >
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 1
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <div
            style="background-color: blanchedalmond;"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.25rem"
              style="--icon-size: 1.25rem;"
              width="1.25rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="test-file-stub#schedule"
              />
            </svg>
            Item 2
          </div>
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 3
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <div
            style="background-color: blanchedalmond;"
          >
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              height="1.25rem"
              style="--icon-size: 1.25rem;"
              width="1.25rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="test-file-stub#schedule"
              />
            </svg>
            Item 4
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<ButtonDropdown /> Default story renders snapshot 1`] = `
<div
  class="button-dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="trigger-button"
    type="button"
  >
    Open Dropdown
  </button>
  <div
    class="dropdown-menu button-dropdown__dropdown-menu"
  >
    <ul
      class="dropdown-menu__list"
      role="menu"
    >
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 1
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 2
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 3
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<ButtonDropdown /> PositionBottomRight story renders snapshot 1`] = `
<div
  class="button-dropdown button-dropdown--bottom-right"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="trigger-button"
    type="button"
  >
    Open Dropdown
  </button>
  <div
    class="dropdown-menu button-dropdown__dropdown-menu"
  >
    <ul
      class="dropdown-menu__list"
      role="menu"
    >
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 1
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 2
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 3
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<ButtonDropdown /> PositionTopLeft story renders snapshot 1`] = `
<div
  class="button-dropdown button-dropdown--top-left"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="trigger-button"
    type="button"
  >
    Open Dropdown
  </button>
  <div
    class="dropdown-menu button-dropdown__dropdown-menu"
  >
    <ul
      class="dropdown-menu__list"
      role="menu"
    >
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 1
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 2
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 3
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<ButtonDropdown /> PositionTopRight story renders snapshot 1`] = `
<div
  class="button-dropdown button-dropdown--top-right"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
    data-bootstrap-override="clickable-style-secondary"
    data-testid="trigger-button"
    type="button"
  >
    Open Dropdown
  </button>
  <div
    class="dropdown-menu button-dropdown__dropdown-menu"
  >
    <ul
      class="dropdown-menu__list"
      role="menu"
    >
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 1
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 2
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 3
        </button>
      </li>
      <li
        class="dropdown-menu__item"
        role="menuitem"
      >
        <button
          class="dropdown-menu__link"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="1.25rem"
            style="--icon-size: 1.25rem;"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="test-file-stub#schedule"
            />
          </svg>
          Item 4
        </button>
      </li>
    </ul>
  </div>
</div>
`;
